--- a/generators/bootstrap/config/translations.yml
+++ b/generators/bootstrap/config/translations.yml
@@ -1,6 +1,6 @@
 # Your translations go here. To be used with the 'translate' liquid filter
 # Example:
-#   {{ 'hello_world | translate '}}
+#   {{ 'hello_world' | translate }}
 #
 
 # hello_world:
