--- a/generators/foundation/config/deploy.yml
+++ b/generators/foundation/config/deploy.yml
@@ -2,11 +2,14 @@ development:
   host: dev.example.com
   email: john@doe.net
   password: apassword
+  # api_key: <your api key here>
 staging:
   host: staging.example.com
   email: john@doe.net
   password: apassword
+  # api_key: <your api key here>
 production:
   host: www.example.com
   email: john@doe.net
   password: apassword
+  # api_key: <your api key here>
