timezone + with_scope now works almost like the engine

--- a/spec/fixtures/default/app/content_types/events.yml
+++ b/spec/fixtures/default/app/content_types/events.yml
@@ -17,3 +17,9 @@ fields:
     label: State of the event
 - notes:
     type: text
+- tags:
+    type: tags
+    label: List of tags
+- price:
+    type: Float
+    label: Price of the event
