push command: create a site to the engine if no entry in the deploy.yml file

--- a/spec/fixtures/default/config/site.yml
+++ b/spec/fixtures/default/config/site.yml
@@ -1,8 +1,6 @@
 name: Sample website
 
-subdomain: sample
-
-domains: ['sample.example.com']
+domains: ['wagon.example.com']
 
 locales: ['en', 'fr', 'nb']
 
