--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -2,215 +2,6 @@
 http_interactions:
 - request:
     method: post
-    uri: http://localhost:3000/locomotive/api/v3/tokens.json?email=john@doe.net&password=asimplepassword
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      Accept:
-      - application/json
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 401
-      message: Unauthorized
-    headers:
-      Content-Type:
-      - application/json
-      X-Error-Detail:
-      - Invalid email or password.
-      Content-Length:
-      - '40'
-      Cache-Control:
-      - no-cache
-      X-Request-Id:
-      - fb0a7852-232e-4c8b-8ab3-456cfbab2078
-      X-Runtime:
-      - '0.664468'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
-    body:
-      encoding: UTF-8
-      string: '{"message":"Invalid email or password."}'
-    http_version: 
-  recorded_at: Wed, 08 Apr 2015 09:48:56 GMT
-- request:
-    method: post
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?account%5Bemail%5D=john@doe.net&account%5Bname%5D=John&account%5Bpassword%5D=asimplepassword
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      Accept:
-      - application/json
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Content-Type:
-      - application/json
-      Content-Length:
-      - '411'
-      Etag:
-      - W/"d5f22e786ad106187b381c8d685a3e92"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - aee412b7-82df-4978-bd1f-f8f3314ead2d
-      X-Runtime:
-      - '0.061719'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
-    body:
-      encoding: UTF-8
-      string: '{"_id":"5524f98864696407ae100000","created_at":"2015-04-08T09:48:56Z","updated_at":"2015-04-08T09:48:56Z","name":"John","email":"john@doe.net","locale":"en","encrypted_password":"39f8358678144ef6715b9420a7a65706552272fb","password_salt":"sV9PWhfxDRy4b1pj6jLd","api_key":"8e5586fe34c5628d8e1ace2a8a750ae922ae2884","super_admin":false,"password":"asimplepassword","password_confirmation":null,"local_admin":false}'
-    http_version: 
-  recorded_at: Wed, 08 Apr 2015 09:48:56 GMT
-- request:
-    method: post
-    uri: http://localhost:3000/locomotive/api/v3/tokens.json?email=admin@locomotivecms.com&password=locomotive
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      Accept:
-      - application/json
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Content-Type:
-      - application/json
-      Content-Length:
-      - '32'
-      Etag:
-      - W/"333586de1d24c181814b7fd1fc093943"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 7b0c6596-42b7-4466-94a3-5347b7fc9234
-      X-Runtime:
-      - '0.019200'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
-    body:
-      encoding: UTF-8
-      string: '{"token":"by7uUTBWyg5LzGTfyykK"}'
-    http_version: 
-  recorded_at: Wed, 08 Apr 2015 10:50:39 GMT
-- request:
-    method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=by7uUTBWyg5LzGTfyykK
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/json
-      X-Locomotive-Account-Email:
-      - admin@locomotivecms.com
-      X-Locomotive-Account-Token:
-      - by7uUTBWyg5LzGTfyykK
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json
-      Content-Length:
-      - '409'
-      Etag:
-      - W/"de9362bbb5bdda2f08c588cb8bccc53e"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 38706597-257a-401c-9769-c8b9d27c237a
-      X-Runtime:
-      - '0.036344'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
-    body:
-      encoding: UTF-8
-      string: '{"_id":"5524f99e646964184d000000","created_at":"2015-04-08T09:49:18Z","updated_at":"2015-04-08T09:49:18Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","encrypted_password":"a8f4f98e0c5a2578d750112f3df78338fa97e198","password_salt":"bQipQKDzKFhXnpXEYxoh","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"password":null,"password_confirmation":null,"local_admin":true}'
-    http_version: 
-  recorded_at: Wed, 08 Apr 2015 10:50:39 GMT
-- request:
-    method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=by7uUTBWyg5LzGTfyykK
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/json
-      X-Locomotive-Account-Email:
-      - admin@locomotivecms.com
-      X-Locomotive-Account-Token:
-      - by7uUTBWyg5LzGTfyykK
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json
-      Content-Length:
-      - '409'
-      Etag:
-      - W/"de9362bbb5bdda2f08c588cb8bccc53e"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 92225521-e544-4a18-a1b5-7f0c45177ad0
-      X-Runtime:
-      - '0.017949'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
-    body:
-      encoding: UTF-8
-      string: '{"_id":"5524f99e646964184d000000","created_at":"2015-04-08T09:49:18Z","updated_at":"2015-04-08T09:49:18Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","encrypted_password":"a8f4f98e0c5a2578d750112f3df78338fa97e198","password_salt":"bQipQKDzKFhXnpXEYxoh","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"password":null,"password_confirmation":null,"local_admin":true}'
-    http_version: 
-  recorded_at: Wed, 08 Apr 2015 10:50:39 GMT
-- request:
-    method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
     body:
       encoding: UTF-8
@@ -238,9 +29,9 @@ http_interactions:
       Cache-Control:
       - no-cache
       X-Request-Id:
-      - a6c974fb-44dc-46e1-9c36-4fbecb291f3b
+      - 7fb8047a-d658-4749-a06f-6d8ffdb31979
       X-Runtime:
-      - '0.444182'
+      - '0.020220'
       Connection:
       - keep-alive
       Server:
@@ -249,7 +40,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"message":"Invalid email or password."}'
     http_version: 
-  recorded_at: Sun, 19 Apr 2015 21:26:18 GMT
+  recorded_at: Tue, 19 May 2015 14:11:30 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
@@ -275,22 +66,22 @@ http_interactions:
       Content-Length:
       - '250'
       Etag:
-      - W/"7f1ccfe9ba64fa9c9fe9e3cc62a4a6ae"
+      - W/"77a6faa0568f7ba809893a63188e0841"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 7d9b6b49-14b6-452b-ad41-448ccd3030da
+      - 9db2c62e-ad67-441a-873e-7f89212ce6bb
       X-Runtime:
-      - '0.060605'
+      - '0.022082'
       Connection:
       - keep-alive
       Server:
       - thin
     body:
       encoding: UTF-8
-      string: '{"_id":"55341d7a64696402c1620000","created_at":"2015-04-19T21:26:18Z","updated_at":"2015-04-19T21:26:18Z","name":"John","email":"john@doe.net","locale":"en","api_key":"f4aabd29e179e2dea96d5f50e8570b06322c79d6","super_admin":false,"local_admin":false}'
+      string: '{"_id":"555b4492646964986c220000","created_at":"2015-05-19T14:11:30Z","updated_at":"2015-05-19T14:11:30Z","name":"John","email":"john@doe.net","locale":"en","api_key":"c17eb23cfde7a2f7f3d08689dd20470cf9bd95a8","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Sun, 19 Apr 2015 21:26:18 GMT
+  recorded_at: Tue, 19 May 2015 14:11:30 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -316,35 +107,35 @@ http_interactions:
       Content-Length:
       - '32'
       Etag:
-      - W/"d1f7b30db41123dbdfabce85ebf9a043"
+      - W/"6b081cb1b0d50389aeec251b56dc5e74"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f68a6e28-a329-4837-9717-e1bf3dffcb4d
+      - 1907747b-b550-4ec4-9da6-9e7f282e435f
       X-Runtime:
-      - '0.015913'
+      - '0.017065'
       Connection:
       - keep-alive
       Server:
       - thin
     body:
       encoding: UTF-8
-      string: '{"token":"B1UseoZ1BSQUr86t5-Kz"}'
+      string: '{"token":"6UA3Po7vVz4Ry34swEqa"}'
     http_version: 
-  recorded_at: Sun, 19 Apr 2015 21:26:18 GMT
+  recorded_at: Tue, 19 May 2015 14:11:30 GMT
 - request:
     method: get
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
     body:
       encoding: UTF-8
-      string: auth_token=B1UseoZ1BSQUr86t5-Kz
+      string: auth_token=6UA3Po7vVz4Ry34swEqa
     headers:
       Accept:
       - application/json
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - B1UseoZ1BSQUr86t5-Kz
+      - 6UA3Po7vVz4Ry34swEqa
       Content-Type:
       - application/x-www-form-urlencoded
       Accept-Encoding:
@@ -359,37 +150,38 @@ http_interactions:
       Content-Type:
       - application/json
       Content-Length:
-      - '261'
+      - '264'
       Etag:
-      - W/"294f1e257d98163da949834493fbbf45"
+      - W/"d661a7257212c7c3bdbddfbef6296311"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - ce060fe8-b9b2-47f5-9b85-7378ebe75007
+      - 6ec73621-c20a-4248-912a-fdc96683df1d
       X-Runtime:
-      - '0.031785'
+      - '0.015687'
       Connection:
       - keep-alive
       Server:
       - thin
     body:
       encoding: UTF-8
-      string: '{"_id":"5533ee1d6469643196000000","created_at":"2015-04-19T18:04:13Z","updated_at":"2015-04-19T18:04:13Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5555b35a646964e1ca000000","created_at":"2015-05-15T08:50:34Z","updated_at":"2015-05-19T14:03:41Z","name":"John
+        Doe","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sun, 19 Apr 2015 21:26:18 GMT
+  recorded_at: Tue, 19 May 2015 14:11:30 GMT
 - request:
     method: get
     uri: http://localhost:3000/locomotive/api/v3/my_account.json
     body:
       encoding: UTF-8
-      string: auth_token=B1UseoZ1BSQUr86t5-Kz
+      string: auth_token=6UA3Po7vVz4Ry34swEqa
     headers:
       Accept:
       - application/json
       X-Locomotive-Account-Email:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
-      - B1UseoZ1BSQUr86t5-Kz
+      - 6UA3Po7vVz4Ry34swEqa
       Content-Type:
       - application/x-www-form-urlencoded
       Accept-Encoding:
@@ -404,22 +196,23 @@ http_interactions:
       Content-Type:
       - application/json
       Content-Length:
-      - '261'
+      - '264'
       Etag:
-      - W/"294f1e257d98163da949834493fbbf45"
+      - W/"d661a7257212c7c3bdbddfbef6296311"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 4ce9cefd-14b4-4ed2-8e35-b66e2ec9e1ec
+      - 68f440fc-1603-4bd7-a028-7f3741011060
       X-Runtime:
-      - '0.016007'
+      - '0.014680'
       Connection:
       - keep-alive
       Server:
       - thin
     body:
       encoding: UTF-8
-      string: '{"_id":"5533ee1d6469643196000000","created_at":"2015-04-19T18:04:13Z","updated_at":"2015-04-19T18:04:13Z","name":"Admin","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
+      string: '{"_id":"5555b35a646964e1ca000000","created_at":"2015-05-15T08:50:34Z","updated_at":"2015-05-19T14:03:41Z","name":"John
+        Doe","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Sun, 19 Apr 2015 21:26:18 GMT
+  recorded_at: Tue, 19 May 2015 14:11:30 GMT
 recorded_with: VCR 2.9.3
