--- a/spec/fixtures/cassettes/authenticate.yml
+++ b/spec/fixtures/cassettes/authenticate.yml
@@ -22,31 +22,27 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      Content-Length:
-      - '32'
       Etag:
       - W/"2245a1c3eefc06a0a39cca5e28eb4822"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - c7ddea05-6b69-4454-8f5a-b667a8628ef9
+      - 0f1457f9-91de-426d-b43b-233b76f7026f
       X-Runtime:
-      - '0.590206'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
+      - '0.109440'
+      Content-Length:
+      - '32'
     body:
       encoding: UTF-8
       string: '{"token":"ib6bXanDDnsFjyujf9Gt"}'
     http_version: 
-  recorded_at: Mon, 25 May 2015 23:06:12 GMT
+  recorded_at: Thu, 30 Jul 2015 15:38:43 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=ib6bXanDDnsFjyujf9Gt
     body:
-      encoding: UTF-8
-      string: auth_token=ib6bXanDDnsFjyujf9Gt
+      encoding: US-ASCII
+      string: ''
     headers:
       Accept:
       - application/json
@@ -54,8 +50,6 @@ http_interactions:
       - john@doe.net
       X-Locomotive-Account-Token:
       - ib6bXanDDnsFjyujf9Gt
-      Content-Type:
-      - application/x-www-form-urlencoded
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -67,31 +61,27 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      Content-Length:
-      - '250'
       Etag:
       - W/"77a6faa0568f7ba809893a63188e0841"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - ea9681b4-a8ed-4c0e-86e7-da1824762b79
+      - b07dfcd8-7194-4f94-b9f5-8c07f2061171
       X-Runtime:
-      - '0.087301'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
+      - '0.029664'
+      Content-Length:
+      - '250'
     body:
       encoding: UTF-8
       string: '{"_id":"555b4492646964986c220000","created_at":"2015-05-19T14:11:30Z","updated_at":"2015-05-19T14:11:30Z","name":"John","email":"john@doe.net","locale":"en","api_key":"c17eb23cfde7a2f7f3d08689dd20470cf9bd95a8","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Mon, 25 May 2015 23:06:12 GMT
+  recorded_at: Thu, 30 Jul 2015 15:38:43 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=ib6bXanDDnsFjyujf9Gt
     body:
-      encoding: UTF-8
-      string: auth_token=ib6bXanDDnsFjyujf9Gt
+      encoding: US-ASCII
+      string: ''
     headers:
       Accept:
       - application/json
@@ -99,8 +89,6 @@ http_interactions:
       - john@doe.net
       X-Locomotive-Account-Token:
       - ib6bXanDDnsFjyujf9Gt
-      Content-Type:
-      - application/x-www-form-urlencoded
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -112,25 +100,21 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      Content-Length:
-      - '250'
       Etag:
       - W/"77a6faa0568f7ba809893a63188e0841"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 736fdff0-e01e-424f-9071-619960ad972f
+      - 71d0e6f8-547a-4ae4-ae53-a2e450d6e408
       X-Runtime:
-      - '0.013798'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
+      - '0.020693'
+      Content-Length:
+      - '250'
     body:
       encoding: UTF-8
       string: '{"_id":"555b4492646964986c220000","created_at":"2015-05-19T14:11:30Z","updated_at":"2015-05-19T14:11:30Z","name":"John","email":"john@doe.net","locale":"en","api_key":"c17eb23cfde7a2f7f3d08689dd20470cf9bd95a8","super_admin":false,"local_admin":false}'
     http_version: 
-  recorded_at: Mon, 25 May 2015 23:06:12 GMT
+  recorded_at: Thu, 30 Jul 2015 15:38:43 GMT
 - request:
     method: post
     uri: http://localhost:3000/locomotive/api/v3/tokens.json
@@ -153,31 +137,27 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      Content-Length:
-      - '32'
       Etag:
       - W/"6b081cb1b0d50389aeec251b56dc5e74"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a19a725f-16bd-4e61-9965-0663181e5262
+      - 593ef2da-eea5-4161-a96d-67986bc5dc8e
       X-Runtime:
-      - '0.014548'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
+      - '0.018697'
+      Content-Length:
+      - '32'
     body:
       encoding: UTF-8
       string: '{"token":"6UA3Po7vVz4Ry34swEqa"}'
     http_version: 
-  recorded_at: Mon, 25 May 2015 23:06:12 GMT
+  recorded_at: Thu, 30 Jul 2015 15:38:43 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=6UA3Po7vVz4Ry34swEqa
     body:
-      encoding: UTF-8
-      string: auth_token=6UA3Po7vVz4Ry34swEqa
+      encoding: US-ASCII
+      string: ''
     headers:
       Accept:
       - application/json
@@ -185,8 +165,6 @@ http_interactions:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
       - 6UA3Po7vVz4Ry34swEqa
-      Content-Type:
-      - application/x-www-form-urlencoded
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -198,32 +176,28 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      Content-Length:
-      - '264'
       Etag:
-      - W/"cd64b967426892bd75445b74968ee0e7"
+      - W/"e3c136adec199820a931484dadaa9d14"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 1637260c-7fdc-47cc-b2cb-4b32a976146a
+      - b0ac9c5b-462f-4ee2-8550-4ab2d0a11880
       X-Runtime:
-      - '0.014046'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
+      - '0.019627'
+      Content-Length:
+      - '264'
     body:
       encoding: UTF-8
-      string: '{"_id":"5555b35a646964e1ca000000","created_at":"2015-05-15T08:50:34Z","updated_at":"2015-05-21T11:12:17Z","name":"John
+      string: '{"_id":"5555b35a646964e1ca000000","created_at":"2015-05-15T08:50:34Z","updated_at":"2015-07-30T14:17:48Z","name":"John
         Doe","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 25 May 2015 23:06:12 GMT
+  recorded_at: Thu, 30 Jul 2015 15:38:43 GMT
 - request:
     method: get
-    uri: http://localhost:3000/locomotive/api/v3/my_account.json
+    uri: http://localhost:3000/locomotive/api/v3/my_account.json?auth_token=6UA3Po7vVz4Ry34swEqa
     body:
-      encoding: UTF-8
-      string: auth_token=6UA3Po7vVz4Ry34swEqa
+      encoding: US-ASCII
+      string: ''
     headers:
       Accept:
       - application/json
@@ -231,8 +205,6 @@ http_interactions:
       - admin@locomotivecms.com
       X-Locomotive-Account-Token:
       - 6UA3Po7vVz4Ry34swEqa
-      Content-Type:
-      - application/x-www-form-urlencoded
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       User-Agent:
@@ -244,24 +216,20 @@ http_interactions:
     headers:
       Content-Type:
       - application/json
-      Content-Length:
-      - '264'
       Etag:
-      - W/"cd64b967426892bd75445b74968ee0e7"
+      - W/"e3c136adec199820a931484dadaa9d14"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 286b83c2-dc57-4ff6-b93e-69d4b083b7ef
+      - 69fc6c14-9f2b-458d-b75c-6a3d69fc03a6
       X-Runtime:
-      - '0.019133'
-      Connection:
-      - keep-alive
-      Server:
-      - thin
+      - '0.019859'
+      Content-Length:
+      - '264'
     body:
       encoding: UTF-8
-      string: '{"_id":"5555b35a646964e1ca000000","created_at":"2015-05-15T08:50:34Z","updated_at":"2015-05-21T11:12:17Z","name":"John
+      string: '{"_id":"5555b35a646964e1ca000000","created_at":"2015-05-15T08:50:34Z","updated_at":"2015-07-30T14:17:48Z","name":"John
         Doe","email":"admin@locomotivecms.com","locale":"en","api_key":"d49cd50f6f0d2b163f48fc73cb249f0244c37074","super_admin":false,"local_admin":true}'
     http_version: 
-  recorded_at: Mon, 25 May 2015 23:06:12 GMT
+  recorded_at: Thu, 30 Jul 2015 15:38:43 GMT
 recorded_with: VCR 2.9.3
